fix some layout issues

--- a/src/04_Variables_And_StyleComponents/Project_Card/Project_Card.scss
+++ b/src/04_Variables_And_StyleComponents/Project_Card/Project_Card.scss
@@ -82,15 +82,15 @@
   }
 }
 
-@media screen and (max-width: 375px) {
-  .project_card {
-    height: 320px;
-    & img {
-      min-width: 100%;
-      min-height: 100%;
-      user-select: none;
-      -webkit-user-drag: none;
-      object-fit: cover;
-    }
-  }
-}
+// @media screen and (max-width: 375px) {
+//   .project_card {
+//     height: 320px;
+//     & img {
+//       min-width: 100%;
+//       min-height: 100%;
+//       user-select: none;
+//       -webkit-user-drag: none;
+//       object-fit: cover;
+//     }
+//   }
+// }
